--- a/ShortMovieUI/Views/MovieHome/Index.cshtml
+++ b/ShortMovieUI/Views/MovieHome/Index.cshtml
@@ -9,10 +9,8 @@
 		<div class="row">
 			<div class="social-link">
 				<p>Bizi Takip Et: </p>
-				<a href="#"><i class="ion-social-facebook"></i></a>
-				<a href="#"><i class="ion-social-twitter"></i></a>
-				<a href="#"><i class="ion-social-googleplus"></i></a>
-				<a href="#"><i class="ion-social-youtube"></i></a>
+				<a href="https://www.linkedin.com/in/yunusemremaral/"><i class="ion-social-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/eren-akinci/"><i class="ion-social-linkedin"></i></a>
 			</div>
 			@await Component.InvokeAsync("_MovieHomeSlider")
 
