--- a/ShortMovieUI/Views/AdminDashboard/Index.cshtml
+++ b/ShortMovieUI/Views/AdminDashboard/Index.cshtml
@@ -91,86 +91,44 @@
     </div>
 
     <div class="row">
-        <div class="col-xl-4 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body border-bottom">
-                    <div class="d-flex justify-content-between align-items-center flex-wrap">
-                        <h6 class="mb-2 mb-md-0 text-uppercase font-weight-medium">Overall sales</h6>
-                        <div class="dropdown">
-                            <button class="btn bg-white p-0 pb-1 text-muted btn-sm dropdown-toggle" type="button" id="dropdownMenuSizeButton3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Last 30 days
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuSizeButton3">
-                                <h6 class="dropdown-header">Settings</h6>
-                                <a class="dropdown-item" href="javascript:;">Action</a>
-                                <a class="dropdown-item" href="javascript:;">Another action</a>
-                                <a class="dropdown-item" href="javascript:;">Something else here</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="javascript:;">Separated link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <canvas id="sales-chart-c" class="mt-2"></canvas>
-                    <div class="d-flex align-items-center justify-content-between border-bottom pb-3 mb-3 mt-4">
-                        <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-muted">Gross Sales</p>
-                            <h5>492</h5>
-                            <div class="d-flex align-items-baseline">
-                                <p class="text-success mb-0">0.5%</p>
-                                <i class="typcn typcn-arrow-up-thick text-success"></i>
-                            </div>
-                        </div>
-                        <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-muted">Purchases</p>
-                            <h5>87k</h5>
-                            <div class="d-flex align-items-baseline">
-                                <p class="text-success mb-0">0.8%</p>
-                                <i class="typcn typcn-arrow-up-thick text-success"></i>
-                            </div>
-                        </div>
-                        <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-muted">Tax Return</p>
-                            <h5>882</h5>
-                            <div class="d-flex align-items-baseline">
-                                <p class="text-danger mb-0">-04%</p>
-                                <i class="typcn typcn-arrow-down-thick text-danger"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="dropdown">
-                            <button class="btn bg-white p-0 pb-1 pt-1 text-muted btn-sm dropdown-toggle" type="button" id="dropdownMenuSizeButton3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Last 7 days
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuSizeButton3">
-                                <h6 class="dropdown-header">Settings</h6>
-                                <a class="dropdown-item" href="javascript:;">Action</a>
-                                <a class="dropdown-item" href="javascript:;">Another action</a>
-                                <a class="dropdown-item" href="javascript:;">Something else here</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="javascript:;">Separated link</a>
-                            </div>
-                        </div>
-                        <p class="mb-0">overview</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-xl-4 grid-margin stretch-card">
+
+        @await Component.InvokeAsync("_AdminDashboardGrafik")
+
+        <div class="col-md-6 col-xl-4 grid-margin stretch-card" style="gap:5px;">
             <div class="row">
-                <div class="col-md-12 grid-margin stretch-card">
-                    <div class="card newsletter-card bg-gradient-warning">
+                <div class="col-md-12 stretch-card">
+                    <div class="card profile-card bg-gradient-primary">
                         <div class="card-body">
-                            <div class="d-flex flex-column align-items-center justify-content-center h-100">
-                                <h5 class="mb-3 text-white">Newsletter</h5>
-                                <form class="form d-flex flex-column align-items-center justify-content-between w-100">
-                                    <div class="form-group mb-2 w-100">
-                                        <input type="text" class="form-control" placeholder="email address">
+                            <div class="row align-items-center h-100">
+                                <div class="col-md-4">
+                                    <figure class="avatar mx-auto mb-4 mb-md-0">
+                                        <img src="~/images/sirin.png" alt="avatar">
+                                    </figure>
+                                </div>
+                                <div class="col-md-8">
+                                    <h5 class="text-white text-center text-md-left">Yunus Emre Maral</h5>
+                                    <p class="text-white text-center text-md-left">maralyunus41@gmail.com</p>
+                                    <div class="d-flex align-items-center justify-content-between info pt-2">
+                                        <div>
+                                            <p class="text-white font-weight-bold">Yaş</p>
+                                            <p class="text-white font-weight-bold">İl</p>
+                                        </div>
+                                        <div>
+                                            <p class="text-white">
+                                                @{
+                                                    DateTime now = DateTime.Now;
+                                                    DateTime targetDate = new DateTime(2001, 9, 19);
+                                                    TimeSpan difference = now - targetDate;
+                                                    double totalDays = difference.TotalDays;
+                                                    double totalYears = Math.Floor(totalDays / 365.25);
+                                                    
+
+                                                }@totalYears
+                                            <p>
+                                            <p class="text-white">Kocaeli</p>
+                                        </div>
                                     </div>
-                                    <button class="btn btn-danger btn-rounded mt-1" type="submit">Subscribe</button>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -181,20 +139,24 @@
                             <div class="row align-items-center h-100">
                                 <div class="col-md-4">
                                     <figure class="avatar mx-auto mb-4 mb-md-0">
-                                        <img src="images/faces/face20.jpg" alt="avatar">
+                                        <img src="~/images/98128167.jpg" alt="avatar">
                                     </figure>
                                 </div>
                                 <div class="col-md-8">
-                                    <h5 class="text-white text-center text-md-left">Phoebe Kennedy</h5>
-                                    <p class="text-white text-center text-md-left">kennedy@gmail.com</p>
+                                    <h5 class="text-white text-center text-md-left">Eren Akıcı</h5>
+                                    <p class="text-white text-center text-md-left">
+                                        erenn2569@outlook.com.tr
+                                    </p>
                                     <div class="d-flex align-items-center justify-content-between info pt-2">
                                         <div>
-                                            <p class="text-white font-weight-bold">Birth date</p>
-                                            <p class="text-white font-weight-bold">Birth city</p>
+                                            <p class="text-white font-weight-bold">Yaş</p>
+                                            <p class="text-white font-weight-bold">İl</p>
                                         </div>
                                         <div>
-                                            <p class="text-white">16 Sep 2019</p>
-                                            <p class="text-white">Netherlands</p>
+                                            <p class="text-white">
+                                               @totalYears
+                                            </p>
+                                            <p class="text-white">Sakarya</p>
                                         </div>
                                     </div>
                                 </div>
@@ -204,77 +166,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xl-4 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body border-bottom">
-                    <div class="d-flex justify-content-between align-items-center flex-wrap">
-                        <h6 class="mb-2 mb-md-0 text-uppercase font-weight-medium">Sales statistics</h6>
-                        <div class="dropdown">
-                            <button class="btn bg-white p-0 pb-1 text-muted btn-sm dropdown-toggle" type="button" id="dropdownMenuSizeButton4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Last 7 days
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuSizeButton4">
-                                <h6 class="dropdown-header">Settings</h6>
-                                <a class="dropdown-item" href="javascript:;">Action</a>
-                                <a class="dropdown-item" href="javascript:;">Another action</a>
-                                <a class="dropdown-item" href="javascript:;">Something else here</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="javascript:;">Separated link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <canvas id="sales-chart-d" height="320"></canvas>
-                </div>
-            </div>
-        </div>
+        
     </div>
 
-    <div class="row">
-        <div class="col-md-4 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex align-items-center justify-content-between justify-content-md-center justify-content-xl-between flex-wrap mb-4">
-                        <div>
-                            <p class="mb-2 text-md-center text-lg-left">Total Expenses</p>
-                            <h1 class="mb-0">8742</h1>
-                        </div>
-                        <i class="typcn typcn-briefcase icon-xl text-secondary"></i>
-                    </div>
-                    <canvas id="expense-chart" height="80"></canvas>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex align-items-center justify-content-between justify-content-md-center justify-content-xl-between flex-wrap mb-4">
-                        <div>
-                            <p class="mb-2 text-md-center text-lg-left">Total Budget</p>
-                            <h1 class="mb-0">47,840</h1>
-                        </div>
-                        <i class="typcn typcn-chart-pie icon-xl text-secondary"></i>
-                    </div>
-                    <canvas id="budget-chart" height="80"></canvas>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex align-items-center justify-content-between justify-content-md-center justify-content-xl-between flex-wrap mb-4">
-                        <div>
-                            <p class="mb-2 text-md-center text-lg-left">Total Balance</p>
-                            <h1 class="mb-0">$7,243</h1>
-                        </div>
-                        <i class="typcn typcn-clipboard icon-xl text-secondary"></i>
-                    </div>
-                    <canvas id="balance-chart" height="80"></canvas>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 
     
 
